Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
eazyBI
Give feedback to Atlassian
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Acknowledged notifications
Core Server
SERVER-2347
listDatabases not returning config database
Undo Transition
Closed
null
Export
XML
Word
Printable
JSON
Details
Type:
Bug
Resolution:
Done
Priority:
Major - P3
Fix Version/s:
1.7.5
Affects Version/s:
1.7.4
Component/s:
Shell
Labels:
None
Field Tab
Aha! Info
Operating System:
ALL
CAR Domain/s:
None
Aha! Reference:
None
Tracking Level:
None
Risk Status:
None
Exec Notes:
None
Goal Name(s):
None
Goal Link:
None
Description
This doesn't include the "config" database when present.
db.runCommand('listDatabases');
Attachments
Activity
People
Assignee:
Unassigned
Reporter:
Ryan Nitz
Participants:
auto
,
Ryan Nitz
Votes
:
0
Vote for this issue
Watchers:
0
Start watching this issue
Dates
Created:
Jan 11 2011 08:50:52 PM UTC
Updated:
Jul 12 2016 12:17:27 AM UTC
Resolved:
Jan 11 2011 09:05:02 PM UTC
PagerDuty