make sure config is in listDatabases SERVER-2347